Update image in exp.html

--- a/exp.html
+++ b/exp.html
@@ -74,7 +74,7 @@
       const playerImage = new Image();
       playerImage.src = "images/jackie-chan.png"; // Ensure path is correct
       const itemImage = new Image();
-      itemImage.src = "images/magic-stone.png"; // Ensure path is correct
+      itemImage.src = "images/magic-stone.png";
 
       // Player settings
       let player = {
