Update image path in exp.html

--- a/exp.html
+++ b/exp.html
@@ -72,7 +72,7 @@
 
       // Load player and item images
       const playerImage = new Image();
-      playerImage.src = "images/jackie-chan.png"; // Ensure path is correct
+      playerImage.src = "images/jackie-chan.png";
       const itemImage = new Image();
       itemImage.src = "images/magic-stone.png";
 
