--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <nav>
       <h1>Plearn</h1>
+      <h5>Playful way to learn</h5>
     </nav>
     <div class="container">
       <div class="div-1" onclick="game1()">Knowledge quest</div>
