--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <nav>
-      <h1>Plearn</h1>
+      <h1>Plearn</h1><br/>
       <h5>Playful way to learn</h5>
     </nav>
     <div class="container">
