--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <nav>
-      <h1>Plearn</h1><br/>
-      <h1>Playful way to learn</h1>
+      <h1>PLEARN </h1><br/>
+      <h3>Playful way to learn</h3>
     </nav>
     <div class="container">
       <div class="div-1" onclick="game1()">Knowledge quest</div>
